[package]
name = "pandoc_ast"
version = "0.5.1"
authors = ["Oliver Schneider <rust-pandoc-ast885559849564@oli-obk.de>"]
readme = "README.md"
keywords = ["latex", "markdown", "pandoc", "filter", "ast"]
repository = "https://github.com/oli-obk/pandoc-ast"
documentation = "https://docs.rs/pandoc_ast/0.5.0/pandoc_ast/"
license-file = "LICENSE"
description = "deserializes and serializes pandoc ast json"

[dependencies]
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
