[package]
name = "pandoc_ast"
version = "0.8.4"
authors = ["Oliver Schneider <rust-pandoc-ast885559849564@oli-obk.de>"]
readme = "README.md"
keywords = ["latex", "markdown", "pandoc", "filter", "ast"]
repository = "https://github.com/oli-obk/pandoc-ast"
documentation = "https://docs.rs/pandoc_ast/0.6.0/pandoc_ast/"
license-file = "LICENSE"
description = "deserializes and serializes the markdown ast for writing pandoc filters"


[dependencies]
serde = "1.0.2"
serde_json = "1.0.1"
serde_derive = "1.0.2"
