[package]
name = "pandoc_ast"
version = "0.8.6"
authors = ["Oliver Scherer <rust-pandoc-ast885559849564@oli-obk.de>"]
readme = "README.md"
keywords = ["latex", "markdown", "pandoc", "filter", "ast"]
repository = "https://github.com/oli-obk/pandoc-ast"
license = "MIT"
description = "deserializes and serializes the markdown ast for writing pandoc filters"


[dependencies]
serde = "1.0.2"
serde_json = "1.0.1"
serde_derive = "1.0.2"
